Revision history for Dist-Zilla-Plugins-CJM

Note: the version number of a plugin is the version of the dist in
which it was last changed.

4.13   NOT
	Dist::Zilla::Plugin::GitVersionCheckCJM
	  - Fix compatibility with Git::Wrapper 0.028_96
	    (Don't pass Path::Class objects to Git::Wrapper)

4.12   January 12, 2013
	Dist::Zilla::Plugin::TemplateCJM
	  - handle pure-POD files without package declaration or $VERSION
	    (Must be named *.pod and found in lib/ directory.)

4.11   November 3, 2012
	- no functional changes in this release, just improved docs

	Dist::Zilla::Plugin::MakeMaker::Custom
	  - expand SYNOPSIS to show more complete example
	  - add documentation about combining with AutoPrereqs

	Dist::Zilla::Plugin::ModuleBuild::Custom
	  - add documentation about combining with AutoPrereqs

4.10   August 3, 2012
	Dist::Zilla::Plugin::TemplateCJM
	  - normalize Perl version in dependency_list
	  - remove leading "v" from versions in dependency_list

4.09   June 4, 2012
	Dist::Zilla::Plugin::TemplateCJM
	  - add report_versions parameter

4.08   April 28, 2012
	- no functional changes in this release, just improved docs

	Dist::Zilla::Plugin::MakeMaker::Custom
	  - document how it compares to the MakeMaker::Awesome plugin

4.07   February 22, 2012
	Dist::Zilla::Plugin::MakeMaker::Custom
	  - now compatible with (and requires) Dist::Zilla 4.300009
	    %share_dir_code replaces @share_dir_block in templates
	  - fix typo in documentation

	Dist::Zilla::Plugin::ModuleBuild::Custom
	  - fix typo in documentation

4.06   January 2, 2012
	Dist::Zilla::Plugin::RecommendedPrereqs
	  - use CPAN::Meta::Requirements (new name of Version::Requirements)

4.05   December 21, 2011
	Dist::Zilla::Plugin::RecommendedPrereqs
	  - Filter runtime recommendations out of test recommendations

4.04   December 12, 2011
	Dist::Zilla::Plugin::Test::PrereqsFromMeta
	  - New plugin

4.03   November 11, 2011
	Dist::Zilla::Plugin::GitVersionCheckCJM