@@ -17,7 +17,7 @@ package Dist::Zilla::Plugin::MakeMaker::Custom;
 # ABSTRACT: Allow a dist to have a custom Makefile.PL
 #---------------------------------------------------------------------
 
-our $VERSION = '4.11';
+our $VERSION = '4.13';
 # This file is part of {{$dist}} {{$dist_version}} ({{$date}})
 
 =head1 DEPENDENCIES
@@ -66,20 +66,74 @@ sub prune_files
 
 =method get_prereqs
 
-  $plugin->get_prereqs
+  $plugin->get_prereqs($api_version);
 
-This is equivalent to
+This is mostly equivalent to
 
-  $plugin->get_default(qw(BUILD_REQUIRES CONFIGURE_REQUIRES PREREQ_PM))
+  $plugin->get_default(qw(BUILD_REQUIRES CONFIGURE_REQUIRES PREREQ_PM
+                          TEST_REQUIRES))
 
 In other words, it returns all the keys that describe the
-distribution's prerequisites.
+distribution's prerequisites.  The C<$api_version> indicates what keys
+the template can handle.  The currently defined values are:
+
+=over 8
+
+=item C<0> (or undef)
+- Fold TEST_REQUIRES into BUILD_REQUIRES.  This provides backwards
+compatibility with older versions of this plugin and Dist::Zilla.
+
+=item C<1>
+- Return TEST_REQUIRES (introduced in ExtUtils::MakeMaker 6.63_03) as a
+separate key (assuming it's not empty).  Your F<Makefile.PL> should
+either require ExtUtils::MakeMaker 6.63_03, or fold TEST_REQUIRES into
+BUILD_REQUIRES if an older version is used (as shown in the SYNOPSIS).
+
+=back
 
 =cut
 
 sub get_prereqs
 {
-  shift->get_default(qw(BUILD_REQUIRES CONFIGURE_REQUIRES PREREQ_PM));
+  my ($self, $api_version) = @_;
+
+  if ($api_version) {
+    $self->log_fatal("api_version $api_version is not supported")
+        unless $api_version == 1;
+    local $@;
+    $self->log(["WARNING: Dist::Zilla %s does not support api_version %d",
+                Dist::Zilla->VERSION, $api_version ])
+        unless eval { Dist::Zilla::Plugin::MakeMaker->VERSION( 4.300032 ) };
+  }
+
+  # Get the prerequisites as a hashref:
+  my $prereqs = $self->extract_keys_as_hash(
+    WriteMakefile => $self->_mmc_write_makefile_args,
+    qw(BUILD_REQUIRES CONFIGURE_REQUIRES PREREQ_PM TEST_REQUIRES)
+  );
+
+  # If we have TEST_REQUIRES, but the template doesn't understand them,
+  # merge them into BUILD_REQUIRES (if any)
+  if ($prereqs->{TEST_REQUIRES} and not $api_version) {
+    if ($prereqs->{BUILD_REQUIRES}) {
+      # have both BUILD_REQUIRES & TEST_REQUIRES, so merge them:
+      require CPAN::Meta::Requirements;
+      CPAN::Meta::Requirements->VERSION(2.121);
+      my ($buildreq, $testreq) = map {
+        CPAN::Meta::Requirements->from_string_hash( $prereqs->{$_} )
+      } qw(BUILD_REQUIRES TEST_REQUIRES);
+
+      $buildreq->add_requirements( $testreq );
+
+      delete $prereqs->{TEST_REQUIRES};
+      $prereqs->{BUILD_REQUIRES} = $buildreq->as_string_hash;
+    } else {
+      # no BUILD_REQUIRES, so we can just rename TEST_REQUIRES:
+      $prereqs->{BUILD_REQUIRES} = delete $prereqs->{TEST_REQUIRES};
+    }
+  } # end if TEST_REQUIRES and $api_version is 0
+
+  $self->hash_as_string( $prereqs );
 } # end get_prereqs
 
 #---------------------------------------------------------------------
@@ -184,12 +238,25 @@ In your F<Makefile.PL>:
   my %args = (
     NAME => "My::Module",
   ##{ $plugin->get_default(qw(ABSTRACT AUTHOR LICENSE VERSION)) ##}
-  ##{ $plugin->get_prereqs ##}
+  ##{ $plugin->get_prereqs(1) ##}
   );
 
+  unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
+    my $tr = delete $args{TEST_REQUIRES};
+    my $br = $args{BUILD_REQUIRES};
+    for my $mod ( keys %$tr ) {
+      if ( exists $br->{$mod} ) {
+        $br->{$mod} = $tr->{$mod} if $tr->{$mod} > $br->{$mod};
+      }
+      else {
+        $br->{$mod} = $tr->{$mod};
+      }
+    }
+  }
+
   unless ( eval { ExtUtils::MakeMaker->VERSION(6.56) } ) {
-    my $br = delete $WriteMakefileArgs{BUILD_REQUIRES};
-    my $pp = $WriteMakefileArgs{PREREQ_PM};
+    my $br = delete $args{BUILD_REQUIRES};
+    my $pp = $args{PREREQ_PM};
     for my $mod ( keys %$br ) {
       if ( exists $pp->{$mod} ) {
         $pp->{$mod} = $br->{$mod} if $br->{$mod} > $pp->{$mod};
