@@ -5,8 +5,15 @@ which it was last changed.
 
 4.13   NOT
 	Dist::Zilla::Plugin::GitVersionCheckCJM
-	  - Fix compatibility with Git::Wrapper 0.028_96
+	  - fix compatibility with Git::Wrapper 0.028_96
 	    (Don't pass Path::Class objects to Git::Wrapper)
+
+	Dist::Zilla::Plugin::MakeMaker::Custom
+	  - fix compatibility with Dist::Zilla 4.300032
+	  - add $api_version parameter to get_prereqs method
+
+	Dist::Zilla::Role::HashDumper
+	  - add extract_keys_as_hash method
 
 4.12   January 12, 2013
 	Dist::Zilla::Plugin::TemplateCJM
